# serializer version: 1
# name: test_core_3x1treino_seed17
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'V-Up',
            'Prancha Slideboard',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Canoinha',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'core(3)',
    }),
  ])
# ---
# name: test_costas_4x1treino_seed9
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Barra Fixa',
            'Remada Aberta Trx',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Remada Baixa Neutra',
            'Puxada Aberta',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'costas(4)',
    }),
  ])
# ---
# name: test_full_body_4treinos_seed1
  list([
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Adução Polia',
          'familia': 'Adução quadril',
          'tipo': 'familia_repetida',
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'abduction',
          'escopo_demanda': 'abduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 2,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Lev. Terra Sumô',
            'Puxada Supinada',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Passada Dos Steps',
            'Apoio Ajoelhado',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Remada Curvada Barra',
            'Adução Polia',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenv. Halteres Uni.',
            'Side Clams',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Dead Bug C/ Bola',
          ]),
        }),
      ]),
      'relaxados': list([
        'Adução Polia',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Desenvolvimento Smith',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Remada Aberta Trx',
            'Stiff Uni. Smith',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Com Barra',
            'Desloc. Lateral c/ Band',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenvolvimento Smith',
            'Slide Board Lateral',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Barra Isométrica',
            'Copenhagen Adduction',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Pallof Press',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenvolvimento Smith',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'exercicio': 'Desenv. Halteres Sentado',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Puxada Aberta',
          'familia': 'Puxada',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Supino Com Anilha',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Hip Thrust',
            'Remada Baixa Neutra',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Com Anilha',
            'Leg Press',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Abdução Polia',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Puxada Aberta',
            'Prancha Lateral',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenv. Halteres Sentado',
        'Puxada Aberta',
        'Supino Com Anilha',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_bilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'abduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Abdução Polia',
            'Abdução quadril',
            'Desloc. Lateral c/ Band',
            'Side Clams',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'exercicio': 'Supino Com Halteres',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Com Halteres',
            'Step Up',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Serrote',
            'Ponte Alternada',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenvolvimento Barra',
            'Hollow Hold',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Pullover Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
        'Supino Com Halteres',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
  ])
# ---
# name: test_full_body_4treinos_seed1_HIB2
  list([
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Adução Polia',
          'familia': 'Adução quadril',
          'tipo': 'familia_repetida',
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'abduction',
          'escopo_demanda': 'abduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 2,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Lev. Terra Sumô',
            'Puxada Supinada',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Passada Dos Steps',
            'Apoio Ajoelhado',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Remada Curvada Barra',
            'Adução Polia',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenv. Halteres Uni.',
            'Side Clams',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Dead Bug C/ Bola',
          ]),
        }),
      ]),
      'relaxados': list([
        'Adução Polia',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Desenvolvimento Smith',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Remada Aberta Trx',
            'Stiff Uni. Smith',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Com Barra',
            'Desloc. Lateral c/ Band',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenvolvimento Smith',
            'Slide Board Lateral',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Barra Isométrica',
            'Copenhagen Adduction',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Pallof Press',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenvolvimento Smith',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'exercicio': 'Desenv. Halteres Sentado',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Puxada Aberta',
          'familia': 'Puxada',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Supino Com Anilha',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Hip Thrust',
            'Remada Baixa Neutra',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Com Anilha',
            'Leg Press',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Abdução Polia',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Puxada Aberta',
            'Prancha Lateral',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenv. Halteres Sentado',
        'Puxada Aberta',
        'Supino Com Anilha',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_bilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'abduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Abdução Polia',
            'Abdução quadril',
            'Desloc. Lateral c/ Band',
            'Side Clams',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'exercicio': 'Supino Com Halteres',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Com Halteres',
            'Step Up',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Serrote',
            'Ponte Alternada',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenvolvimento Barra',
            'Hollow Hold',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Pullover Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
        'Supino Com Halteres',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
  ])
# ---
# name: test_hinge_2_squat_unilateral_2_seed19
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Recuo C/ Barra',
            'Ponte',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Stiff Uni. Smith',
            'Slide Board Lateral',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'hinge(2) + squat(2)',
    }),
  ])
# ---
# name: test_max_complexidade_baixa_seed29
  list([
    dict({
      'avisos': list([
        dict({
          'chave': 'puxadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 0,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Remada Baixa Neutra',
            'Desenv. Landmine',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Apoio Ajoelhado',
            'Crossover Sentado',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(4)',
    }),
  ])
# ---
# name: test_peito_3x2treinos_seed13
  list([
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Apoio Ajoelhado',
          'familia': 'Apoio',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Supino Smith Inclinado',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Smith Inclinado',
            'Apoio Elevado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Apoio Ajoelhado',
          ]),
        }),
      ]),
      'relaxados': list([
        'Apoio Ajoelhado',
        'Supino Smith Inclinado',
      ]),
      'tipo': 'peito(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Com Halteres',
            'Crossover',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Crucifixo Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'peito(3)',
    }),
  ])
# ---
# name: test_perna_anterior_3x3treinos_seed3
  list([
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Agachamento Goblet',
          'familia': 'Agachamento',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Step Up Alt.',
            'Agachamento Goblet',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Box Jump',
          ]),
        }),
      ]),
      'relaxados': list([
        'Agachamento Goblet',
      ]),
      'tipo': 'perna_anterior(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Leg Press',
            'Walking Lunges',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Agach. Lateral',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_anterior(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Agachamento Livre',
            'Cadeira Extensora',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Recuo C/ Barra',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_anterior(3)',
    }),
  ])
# ---
# name: test_perna_posterior_2x2treinos_seed5
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Side Clams',
            'Hip Thrust Uni.',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_posterior(2)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Flexão Joelhos Feijão',
            'Ponte C/ Band',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_posterior(2)',
    }),
  ])
# ---
# name: test_template_empurrar_puxar_seed7
  list([
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Desenvolvimento Barra',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Apoio',
          'familia': 'Apoio',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Com Anilha',
            'Lev. Terra Anilha',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Apoio',
            'Flexão Joelhos Feijão',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenvolvimento Smith',
            'Prancha Slideboard',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenvolvimento Barra',
            'Hip Thrust C/ Band',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Crossover',
            'Abdução Polia',
          ]),
        }),
        dict({
          'label': 'F',
          'nomes': list([
            'Tríceps Coice Polia',
            'Hollow Hold',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenvolvimento Barra',
        'Apoio',
      ]),
      'tipo': 'empurrar_compostos(2) + empurrar_isolados(1) + ombro_composto(2) + hinge(2) + knee_flexion(1) + abduction(1) + core_isometrico(2) + triceps(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Desenv. Halteres Sentado',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Apoio Elevado',
          'familia': 'Apoio',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Stiff Barra Livre',
            'Desenv. Halteres Sentado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Apoio Ajoelhado',
            'Cadeira Flexora',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Apoio Elevado',
            'Dead Bug',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenv. Halteres Uni.',
            'Side Clams',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Crucifixo Halteres',
            'Pallof Press',
          ]),
        }),
        dict({
          'label': 'F',
          'nomes': list([
            'Tríceps Mergulho Banco',
            'Ponte Unilateral',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenv. Halteres Sentado',
        'Apoio Elevado',
      ]),
      'tipo': 'empurrar_compostos(2) + empurrar_isolados(1) + ombro_composto(2) + hinge(2) + knee_flexion(1) + abduction(1) + core_isometrico(2) + triceps(1)',
    }),
  ])
# ---
# name: test_triceps_2_filtro_familia_relax_seed23
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Tríceps Mergulho Banco',
            'Tríceps Coice Polia',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'triceps(2)',
    }),
  ])
# ---
# name: test_upper_3_lower_2_core_2_3treinos_seed42
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Barra Fixa',
            'Agachamento Goblet',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Serrote',
            'Ponte C/ Band',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Remada Neutra Trx',
            'V-Up Unilateral',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Dead Bug',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Supino Com Anilha',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Apoio',
            'Lev. Terra Anilha',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Com Anilha',
            'Crunch No Cabo',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Crossover Sentado',
            'Cadeira Extensora',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Prancha Alternada',
          ]),
        }),
      ]),
      'relaxados': list([
        'Supino Com Anilha',
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Stiff Halteres',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Com Halteres',
            'Box Jump',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Elevação Frontal Anilha',
            'Canoinha',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Hollow Hold',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
  ])
# ---
# name: test_upper_3x2treinos_seed11
  list([
    dict({
      'avisos': list([
        dict({
          'chave': 'remadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 0,
        }),
        dict({
          'chave': 'remadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 1,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Supino Com Halteres',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Puxada Aberta',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Apoio',
            'Crossover',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Pullover Polia',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3)',
    }),
  ])
# ---
